--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -196,36 +196,15 @@
                         }
                     } // one line
 
-
+                    //all lines processed
                     $('#bathymetry__points_count').html(sonar__dataItemsCount + ' points');
                     $('#map_palette_min_text').html(Math.round(sonar__depth_min * 100) / 100 + ' m');
                     $('#map_palette_max_text').html(Math.round(sonar__depth_max * 100) / 100 + ' m');
 
-
-                    /*
-                     //LOGIC
-                     if (sonar__mapIsReady) {
-                     for (let index in sonar__pointsLatLng) {
-                     const ll = index.split(/_/);
-                     sonar__point(ll[0], ll[1], sonar__pointsLatLng[index]);
-                     }
-                     }
-                     if (sonar__dataItemsCount < 500) {
-                     let html = '<div class="logic_pulses_block">';
-                     let lastF = 0;
-                     for (const pulse of pulses) {
-                     let ml_px = Math.round((pulse.R) / 10.0);
-                     let w_px = Math.round(pulse.W / 10.0);
-                     html += '<div class="logic_pulse" title="W,mks: ' + pulse.W + '" style="margin-left:' + ml_px + 'px; width:' + w_px + 'px;"></div>';
-                     html += '<div class="logic_pulse_axis_x_point" title="mks from Sync: ' + pulse.R + '" style="margin-left:' + (ml_px - 4) + 'px; "></div>';
-                     html += '<div class="logic_pulse_axis_x_point" title="mks from Sync: ' + pulse.F + '" style="margin-left:' + (ml_px + w_px - 4) + 'px; "></div>';
-                     lastF = pulse.F;
-                     }
-                     html += '<div class="logic_pulse_axis_x" style="margin-left:0px; width:' + lastF + 'px;"></div>';
-                     html += '</div>';
-                     $('#sonar__logic_block').append(html);
-                     */
-
+                    for (let index in sonar__pointsLatLng) {
+                        const ll = index.split(/_/);
+                        sonar__point(ll[0], ll[1], sonar__pointsLatLng[index]);
+                    }
                 }
 
                 function sonar__palette() {
@@ -235,23 +214,22 @@
                     }
                 }
 
-                function sonar__point(lat, lng, depthM) {
-                    const color = sonar__getColor(depthM) + 'FF';
-                    let r = 1;
-                    let myCircle = new ymaps.Circle([
-                        [lat, lng], // Координаты центра круга.            
-                        r // Радиус круга в метрах.
-                    ], {
-                        balloonContent: Math.round(depthM * 100) / 100 + "m",
-                        hintContent: Math.round(depthM * 100) / 100 + "m",
-                    }, {
-                        draggable: false,
-                        fillColor: color, // Цвет заливки. Последний байт (77) определяет прозрачность.            
-                        strokeColor: color, // Цвет обводки.            
-                        strokeOpacity: 0, // Прозрачность обводки.           
-                        strokeWidth: 1 // Ширина обводки в пикселях.
-                    });
-                    sonar__map.geoObjects.add(myCircle);
+                function sonar__point(lat, lng, data) {
+                    const color = sonar__getColor(data.depthM);
+                    const offsetX_px = sonar__getOffsetX_px(lat);
+                    const offsetY = sonar__getOffsetY_px(lng);
+
+                    let html = '<div class="logic_pulses_block">';
+                    for (const pulse of data.pulses) {
+                        let ml_px = Math.round((pulse.R) / 10.0);
+                        let w_px = Math.round(pulse.W / 10.0);
+                        html += '<div class="logic_pulse" title="W,mks: ' + pulse.W + '" style="margin-left:' + ml_px + 'px; width:' + w_px + 'px;"></div>';
+                    }
+                    html += '</div>';
+
+
+
+                    $('#sonar__3D_block').append(html);
                 }
 
                 function sonar__getColor(depthM) {
@@ -297,9 +275,9 @@
         padding: 0;
     }
 
-    #sonar__logic_block{ 
+    #sonar__3D_block{ 
         width: 100%; 
-        height: 400px; 
+        height: 800px; 
         overflow: scroll;
         position: relative;
         border: 1px solid #003580;
