--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <link href="bootstrap.min.css" rel="stylesheet">
         <title>3D</title>
     </head>
     <body>
@@ -75,7 +75,8 @@
                     '#2061ec',
                     '#3125e3'
                 ];
-                let sonar__lat_min = 0, sonar__lng_min = 0, sonar__lat_max = 0, sonar__lng_max = 0;
+                let sonar__lat_min = 1000, sonar__lng_min = 1000, sonar__lat_max = 0, sonar__lng_max = 0;
+                let sonar__getOffsetLng_px_dx = 0;
 
                 document.addEventListener('DOMContentLoaded', function () {
                     sonar__palette();
@@ -201,6 +202,9 @@
                     $('#map_palette_min_text').html(Math.round(sonar__depth_min * 100) / 100 + ' m');
                     $('#map_palette_max_text').html(Math.round(sonar__depth_max * 100) / 100 + ' m');
 
+
+                    sonar__getOffsetLng_px_dx = (sonar__lng_max - sonar__lng_min) / 1000; //max size paper
+
                     for (let index in sonar__pointsLatLng) {
                         const ll = index.split(/_/);
                         sonar__point(ll[0], ll[1], sonar__pointsLatLng[index]);
@@ -216,56 +220,54 @@
 
                 function sonar__point(lat, lng, data) {
                     const color = sonar__getColor(data.depthM);
-                    const offsetX_px = sonar__getOffsetX_px(lat);
-                    const offsetY_px = sonar__getOffsetY_px(lng);
+                    const left_px = sonar__getOffsetLng_px(lng);
+                    const top_px = 1000 - sonar__getOffsetLat_px(lat);
+                    const w_px = Math.round(0.00001 / sonar__getOffsetLng_px_dx);
 
-                    let html = '<div class="logic_pulses_block" style="margin-left:' + offsetX_px + 'px; margin-top:' + offsetY_px + 'px; border-bottom-color:' + color + ';">';
+                    let html = '<div class="logic_pulses_block" style="left:' + left_px + 'px; top:' + top_px + 'px; border-bottom-color:' + color + '; width:' + w_px + 'px; ">';
                     for (const pulse of data.pulses) {
-                        if (pulse.R > data.depth_mks) {
+                        if (pulse.R >= (data.depth_mks - 100)) {
                             break;
                         }
                         let mt_px = sonar__getDepth_px(pulse.R);
-                        let h_px = sonar__getDepth_px(pulse.W);
-                        html += '<div class="logic_pulse" style="margin-top' + mt_px + 'px; height' + h_px + 'px;"></div>';
+                        let h_px = sonar__getDepth_px(pulse.W + pulse.R) - mt_px;
+                        html += '<div class="logic_pulse" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + w_px + 'px; "></div>';
                     }
                     html += '</div>';
 
                     $('#sonar__3D_block').append(html);
                 }
 
-                function sonar__getColor(mks) {
+                function sonar__getColor(m) {
                     const dx = (sonar__depth_max - sonar__depth_min) / sonar__colors.length;
-                    let idx = Math.round(mks / dx);
+                    let idx = Math.round(m / dx);
                     idx = Math.min(Math.max(parseInt(idx), 0), (sonar__colors.length - 1)); //constrain from to
                     return sonar__colors[idx];
                 }
 
                 function sonar__getDepth_px(mks) {
-                    const dx = (sonar__depth_max - sonar__depth_min) / 100; //height=300px
-                    let px = Math.round(mks / dx);
+                    const dx = (sonar__depth_max - sonar__depth_min) / 100; //height 
+                    let px = Math.round((mks / 1367.0) / dx);
+                    px = Math.min(Math.max(px, 0), 100); //constrain from to
                     return px;
                 }
 
-                function sonar__getOffsetX_px(lat) {
-                    const dx = (sonar__lat_max - sonar__lat_min) / 2000; //max size paper
-                    let px = Math.round(lat / dx);
+                function sonar__getOffsetLat_px(lat) {
+                    const dx = (sonar__lat_max - sonar__lat_min) / 1000; //max size paper
+                    let px = Math.round((lat - sonar__lat_min) / dx);
                     return px;
 
                 }
-                function sonar__getOffsetY_px(lng) {
-                    const dx = (sonar__lng_max - sonar__lng_min) / 2000; //max size paper
-                    let px = Math.round(lng / dx);
+                function sonar__getOffsetLng_px(lng) {
+                    let px = Math.round((lng - sonar__lng_min) / sonar__getOffsetLng_px_dx);
                     return px;
                 }
 
 
             </script>
         </main>
-        <script
-            src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-        crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+        <script src="jquery-3.6.0.min.js"></script>
+        <script src="bootstrap.bundle.min.js"></script>
     </body>
 </html>
 <style>
@@ -278,7 +280,7 @@
 
     #sonar__3D_block{ 
         width: 100%; 
-        height: 800px; 
+        height: 600px; 
         overflow: scroll;
         position: relative;
         border: 1px solid #003580;
@@ -287,17 +289,21 @@
     .logic_pulses_block{
         display: block;
         float: left;
-        width: 10px; /*offset lat long */
-        height: 300px; /*see  sonar__getDepth_px*/
-        border-bottom: 2px solid grey; 
-
+        width: 10px; 
+        height: 100px; /*see  sonar__getDepth_px*/
+        border-bottom: 4px solid grey;         
+        position: absolute;
+        opacity: 0.5;
+    }
+    .logic_pulses_block:hover{
+        border: 1px solid red;
+        opacity: 1;
     }
     .logic_pulse{        
-        background-color: #003580;
-        display: inline-block;
+        width: 10px;
+        background-color: grey;       
         position: absolute;
-    }
-    .logic_pulse:hover{         
-        background-color: blueviolet;
+        opacity: 0.5;
     }    
+
 </style>
