--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -9,40 +9,42 @@
     </head>
     <body>
         <main class="container">
-            <div class="row">
-                <div class="col">
-                    <h2>
-                        3D 
-                        <span id="bathymetry__points_count"></span>
-                    </h2>
+            <div class="row mt-2">
+                <div class="col-2">
+                    <div class="row">
+                        <div class="col">
+                            <h2>
+                                3D 
+                                <span id="bathymetry__points_count"></span>
+                            </h2>
+                        </div>                
+                    </div>
                     <div class="row">                        
-                        <div class="col-auto">
-                            <div class="" style="width: 170px">
+                        <div class="col-auto mb-1">
+                            <div class="" style="width: 200px">
                                 <div class="input-group">
                                     <span class="input-group-text" id="basic-addon1">Min depth, m</span>
-                                    <input type="number" id="form_bathymetry__depth_min_input" placeholder="min" value="1" class="form-control">
+                                    <input type="number" id="form_bathymetry__depth_min_input" placeholder="min" value="0.5" class="form-control">
                                 </div>
                             </div>
                         </div>
-                        <div class="col-auto">
-                            <div class="" style="width: 110px">
+                        <div class="col-auto mb-1">
+                            <div class="" style="width: 200px">
                                 <div class="input-group">
                                     <span class="input-group-text" id="basic-addon1">max</span>
                                     <input type="number" id="form_bathymetry__depth_max_input" placeholder="max" value="5" class="form-control">
                                 </div>
                             </div>
                         </div>
-                        <div class="col-auto">
+                        <div class="col-auto mb-1">
                             <textarea id="form_bathymetry__data_input" class="form-control" style="width: 200px; height: 16px;" placeholder="Logic log"></textarea> 
                         </div>
-                        <div class="col-auto">
+                        <div class="col-auto mb-1">
                             <span id="form_bathymetry__btn_ok" class="btn btn-success">Ok</span>
                         </div>
-                    </div>   
-                </div>                
-            </div>
-            <div class="row">
-                <div class="col-12 mt-2">
+                    </div> 
+                </div> 
+                <div class="col-10">
                     <div class="d-block">
                         <div id="map_palette_min_text" class="d-inline-block"></div>
                         <div class="d-inline-block"><div id="map_palette"></div></div>
@@ -56,6 +58,8 @@
             <script>
                 let sonar__depth_min = 0;
                 let sonar__depth_max = 0;
+                let depth_min_allow = 0;
+                let depth_max_allow = 0;
                 let sonar__dataItemsCount = 0;
                 const sonar__colors = [
                     '#f51c03',
@@ -104,8 +108,8 @@
                     let sonar__pointsLatLng = [];
                     sonar__depth_min = 0;
                     sonar__depth_max = 0;
-                    const depth_min_allow = parseFloat($('#form_bathymetry__depth_min_input').val()) || 0;
-                    const depth_max_allow = parseFloat($('#form_bathymetry__depth_max_input').val()) || 0;
+                    depth_min_allow = parseFloat($('#form_bathymetry__depth_min_input').val()) || 0;
+                    depth_max_allow = parseFloat($('#form_bathymetry__depth_max_input').val()) || 0;
 
 
                     const lines = $('#form_bathymetry__data_input').val().split(/\n/);
@@ -192,8 +196,6 @@
                                 sonar__lng_max = lng;
                             }
 
-
-
                             sonar__dataItemsCount++;
                         }
                     } // one line
@@ -228,11 +230,24 @@
                     let html = '<div class="logic_pulses_block" style="left:' + left_px + 'px; top:' + top_px + 'px; border-bottom-color:' + color + '; width:' + w_px + 'px; ">';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
-                            break;
+                            break; //only fish UNDER bottom                            
                         }
                         let mt_px = sonar__getDepth_px(pulse.R);
-                        let h_px = sonar__getDepth_px(pulse.W + pulse.R) - mt_px;
-                        html += '<div class="logic_pulse" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + w_px + 'px; "></div>';
+                        let h_px = Math.max(sonar__getDepth_px(pulse.W + pulse.R) - mt_px, 2);
+                        html += '<div class="logic_pulse" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (w_px - 2) + 'px; "></div>';
+                    }
+                    html += '</div>';
+
+                    let html = '<div class="logic_pulses_full_block" style="left:' + left_px + 'px; top:' + top_px + 'px; border-bottom-color:' + color + '; width:' + w_px + 'px; ">';
+                    for (const pulse of data.pulses) {
+                        if (pulse.R >= (data.depth_mks - 100)) {
+                            pulse_color = color; //bottom
+                        } else {
+                            pulse_color = 'grey'; //fish UNDER bottom
+                        }
+                        let mt_px = sonar__getDepth_px(pulse.R);
+                        let h_px = Math.max(sonar__getDepth_px(pulse.W + pulse.R) - mt_px, 2);
+                        html += '<div class="logic_pulse_full" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (w_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
                     html += '</div>';
 
@@ -247,8 +262,9 @@
                 }
 
                 function sonar__getDepth_px(mks) {
-                    const dx = (sonar__depth_max - sonar__depth_min) / 100; //height 
-                    let px = Math.round((mks / 1367.0) / dx);
+                    //const dx = (sonar__depth_max - sonar__depth_min) / 100; //height 
+                    const dx = (3 * depth_max_allow * 1367.0) / 100; //height 
+                    let px = Math.round(mks / dx);
                     px = Math.min(Math.max(px, 0), 100); //constrain from to
                     return px;
                 }
@@ -281,7 +297,7 @@
 
     #sonar__3D_block{ 
         width: 100%; 
-        height: 600px; 
+        height: 675px; 
         overflow: scroll;
         position: relative;
         border: 1px solid #003580;
@@ -296,6 +312,8 @@
         opacity: 0.4;
         z-index: 500;
         transform: rotate(20deg);
+        padding: 0;
+        margin: 0;
     }
     .logic_pulses_block:hover{
         border-left: 1px solid red;
@@ -304,13 +322,44 @@
         opacity: 1;
         background-color: white;
         z-index: 600;
+        transform: scale(1, 2);
+        transform-origin: bottom left;
     }
     .logic_pulse{          
         background-color: grey;       
-        position: absolute;        
+        position: absolute;    
+        padding: 0;
+        margin: 0;
     }  
-    .logic_pulse:hover{
 
+
+
+
+    logic_pulses_full_block{
+        display: block;
+        float: left;        
+        height: 100px; /*see  sonar__getDepth_px*/
+        border-bottom: 8px solid grey;         
+        position: absolute;
+        opacity: 0.4;
+        z-index: 500;        
+        padding: 0;
+        margin: 0;
     }
-
+    logic_pulses_full_block:hover{
+        border-left: 1px solid red;
+        border-right: 1px solid red;
+        border-top: 1px solid red;
+        opacity: 1;
+        background-color: white;
+        z-index: 600;
+        transform: scale(1, 2);
+        transform-origin: bottom left;
+    }
+    .logic_pulse_full{          
+        background-color: grey;       
+        position: absolute;    
+        padding: 0;
+        margin: 0;
+    }  
 </style>
