--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -46,9 +46,13 @@
                 </div> 
                 <div class="col-10">
                     <div class="d-block">
-                        <div id="map_palette_min_text" class="d-inline-block"></div>
-                        <div class="d-inline-block"><div id="map_palette"></div></div>
-                        <div id="map_palette_max_text" class="d-inline-block"></div>
+                        <div id="sonar__palette_min_text" class="d-inline-block"></div>
+                        <div class="d-inline-block"><div id="sonar__palette"></div></div>
+                        <div id="sonar__palette_max_text" class="d-inline-block"></div>
+
+                        <input id="sonar__over_bottom" type="checkbox" checked> over bottom  &nbsp;&nbsp;&nbsp;&nbsp;
+                        <input id="sonar__bottom" type="checkbox" checked> bottom
+
                     </div>   
                     <div id="sonar__3D_block"></div>
                 </div>                
@@ -91,6 +95,20 @@
                 function sonar__actions() {
                     $('#form_bathymetry__btn_ok').click(() => {
                         sonar__bathymetryProcess();
+                    });
+                    $('#sonar__over_bottom').change(() => {
+                        if ($('#sonar__over_bottom').is(":checked")) {
+                            $('.logic_pulses_block').show();
+                        } else {
+                            $('.logic_pulses_block').hide();
+                        }
+                    });
+                    $('#sonar__bottom').change(() => {
+                        if ($('#sonar__bottom').is(":checked")) {
+                            $('.logic_pulses_full_block').show();
+                        } else {
+                            $('.logic_pulses_full_block').hide();
+                        }
                     });
                 }
 
@@ -202,8 +220,8 @@
 
                     //all lines processed
                     $('#bathymetry__points_count').html(sonar__dataItemsCount + ' points');
-                    $('#map_palette_min_text').html(Math.round(sonar__depth_min * 100) / 100 + ' m');
-                    $('#map_palette_max_text').html(Math.round(sonar__depth_max * 100) / 100 + ' m');
+                    $('#sonar__palette_min_text').html(Math.round(sonar__depth_min * 100) / 100 + ' m');
+                    $('#sonar__palette_max_text').html(Math.round(sonar__depth_max * 100) / 100 + ' m');
 
 
                     sonar__getOffsetLng_px_dx = (sonar__lng_max - sonar__lng_min) / sonar__block_size_px;
@@ -217,7 +235,7 @@
                 function sonar__palette() {
                     for (const color of sonar__colors) {
                         const dv = '<div class="palette__item d-inline-block" style="background-color:' + color + '"></div>';
-                        $('#map_palette').append(dv);
+                        $('#sonar__palette').append(dv);
                     }
                 }
 
@@ -230,7 +248,7 @@
                     let html = '<div class="logic_pulses_block" style="left:' + left_px + 'px; top:' + top_px + 'px; border-bottom-color:' + color + '; width:' + w_px + 'px; ">';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
-                            break; //only fish UNDER bottom                            
+                            break; //only fish over bottom                            
                         }
                         let mt_px = sonar__getDepth_px(pulse.R);
                         let h_px = Math.max(sonar__getDepth_px(pulse.W + pulse.R) - mt_px, 2);
@@ -238,7 +256,7 @@
                     }
                     html += '</div>';
 
-                    let html = '<div class="logic_pulses_full_block" style="left:' + left_px + 'px; top:' + top_px + 'px; border-bottom-color:' + color + '; width:' + w_px + 'px; ">';
+                    html += '<div class="logic_pulses_full_block" style="left:' + left_px + 'px; top:' + top_px + 'px; border-bottom-color:' + color + '; width:' + w_px + 'px; ">';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
                             pulse_color = color; //bottom
@@ -263,7 +281,7 @@
 
                 function sonar__getDepth_px(mks) {
                     //const dx = (sonar__depth_max - sonar__depth_min) / 100; //height 
-                    const dx = (3 * depth_max_allow * 1367.0) / 100; //height 
+                    const dx = (2 * depth_max_allow * 1367.0) / 100; //height 
                     let px = Math.round(mks / dx);
                     px = Math.min(Math.max(px, 0), 100); //constrain from to
                     return px;
@@ -321,9 +339,7 @@
         border-top: 1px solid red;
         opacity: 1;
         background-color: white;
-        z-index: 600;
-        transform: scale(1, 2);
-        transform-origin: bottom left;
+        z-index: 600;        
     }
     .logic_pulse{          
         background-color: grey;       
@@ -333,9 +349,7 @@
     }  
 
 
-
-
-    logic_pulses_full_block{
+    .logic_pulses_full_block{
         display: block;
         float: left;        
         height: 100px; /*see  sonar__getDepth_px*/
@@ -345,16 +359,16 @@
         z-index: 500;        
         padding: 0;
         margin: 0;
+        transform: rotate(20deg);
     }
-    logic_pulses_full_block:hover{
+    .logic_pulses_full_block:hover{
         border-left: 1px solid red;
         border-right: 1px solid red;
         border-top: 1px solid red;
         opacity: 1;
         background-color: white;
-        z-index: 600;
-        transform: scale(1, 2);
-        transform-origin: bottom left;
+        z-index: 600;       
+
     }
     .logic_pulse_full{          
         background-color: grey;       
