--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="bootstrap.min.css" rel="stylesheet">
-        <title>3D</title>
+        <title>3D bathymetry</title>
     </head>
     <body>
         <main class="container">
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class="col">
                             <h2>
-                                3D 
+                                3D bathymetry 
                                 <span id="bathymetry__points_count"></span>
                             </h2>
                         </div>                
