--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -152,6 +152,7 @@
                             continue; //goto next line
                         }
 
+                        //find widths of pulses and add to pulses-array
                         for (const R of RR) {
                             for (const F of FF) {
                                 if (R < F) {
