--- a/JS/V1/public_html/map.html
+++ b/JS/V1/public_html/map.html
@@ -48,7 +48,7 @@
                         <div class="d-inline-block"><div id="map_palette"></div></div>
                         <div id="map_palette_max_text" class="d-inline-block"></div>
                     </div>
-                    <div id="map__bathymetry_block" style="width: 100%; height: 500px;"></div>
+                    <div id="map__bathymetry_block" style="width: 100%; height: 680px;"></div>
                 </div>
             </div>
 
@@ -110,7 +110,6 @@
                     map__depth_max = 0;
                     const depth_min_allow = parseFloat($('#form_bathymetry__depth_min_input').val()) || 0;
                     const depth_max_allow = parseFloat($('#form_bathymetry__depth_max_input').val()) || 0;
-                    //let lat_min = 0, lng_min = 0, lat_max = 0, lng_max = 0;
 
                     const lines = $('#form_bathymetry__data_input').val().split(/\n/);
                     for (const line of lines) {
@@ -134,6 +133,7 @@
                             continue; //goto next line
                         }
 
+                        //find widths of pulses and add to pulses-array
                         for (const R of RR) {
                             for (const F of FF) {
                                 if (R < F) {
